SLT_Handler/Include/MMC/MMMCWHP220.h

INT API spl_arc_movenax(INT len, pINT ax, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_line_movenax(INT len, pINT ax, pDOUBLE pnt, DOUBLE vel, INT acc);
INT API axis_monitor_params(INT ax, pLONG lval, pINT ival );
// ver 1.32
INT API set_event_sharing_axes(INT ax1, INT ax2, INT state);
INT API get_event_sharing_axes(INT bdNum, pINT ax1, pINT ax2, pINT state);
// kckim 2009-07-06 Ver 1.33
INT API get_zphase_position(INT ax, pDOUBLE pos);
// ytlim 2009-08-04 Ver 1.40
//INT API set_switch_status(INT ax, INT state);
// JJS 2014-01-07
INT API set_joystick_enable(INT bdNum, INT Enable);
INT API set_joystick_velocity(INT bdNum, INT vel0, INT vel1, INT vel2, INT vel3);
INT API get_joystick_enable(INT bdNum, pINT Enable);
INT API get_joystick_velocity(INT bdNum, pINT vel0, pINT vel1, pINT vel2, pINT vel3);
INT API homing_start(INT ax);
INT API homing_stop(INT ax);
INT API homing_process(INT ax);
INT API set_homing_option(INT ax, ULONG Timeout, INT Config, INT Dir);
INT API get_homing_option(INT ax, pULONG pTimeout, pINT pConfig, pINT pDir);
INT API set_homing_profile(INT ax, DOUBLE MainVel, INT MainDec, DOUBLE RetVel, INT RetDec, 
								   DOUBLE FineVel, INT FineDec, DOUBLE MarkerVel, INT MarkerDec);
INT API get_homing_profile(INT ax, pDOUBLE pMainVel, pINT pMainDec, pDOUBLE pRetVel, pINT pRetDec, 
								   pDOUBLE pFineVel, pINT pFineDec, pDOUBLE pMarkerVel, pINT pMarkerDec);
// Library Test : 2010.08
INT API mmcsw_version_chk(pINT);
INT API set_mmcsw_version(INT);
INT API	AxisPowerOnCheck(INT);