SLT_Handler/Include/MMC/MMCWHP220.bas


Declare Function spl_line_movenax Lib "MMCWHP220.dll" (ByVal Length As Integer, ByRef ax As Integer, ByRef pnt As Double, ByVal vel As Integer, ByVal acc As Integer) As Integer
Declare Function spl_arc_movenax Lib "MMCWHP220.dll" (ByVal Length As Integer, ByRef ax As Integer, ByVal x_center As Double, ByVal y_center As Double, ByRef pnt As Double, ByVal vel As Integer, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function set_event_sharing_axes Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal state As Integer) As Integer
Declare Function get_event_sharing_axes Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByRef ax1 As Integer, ByRef ax2 As Integer, ByRef state As Integer) As Integer
Declare Function get_zphase_position Lib "MMCWHP220.dll" (ByVal ax As Integer, ByRef pos As Double) As Integer
Declare Function set_switch_status Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal state As Integer) As Integer
Declare Function homing_start Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function homing_stop Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function homing_process Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function set_homing_option Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal Timeout As Long, ByVal Config As Integer, ByVal Dir As Integer) As Integer
Declare Function get_homing_option Lib "MMCWHP220.dll" (ByVal ax As Integer, ByRef pTimeout As Long, ByRef pConfig As Integer, ByRef pDir As Integer) As Integer
Declare Function set_homing_profile Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal MainVel As Double, ByVal MainDec As Integer, ByVal RetVel As Double, ByVal RetDec As Integer, ByVal FineVel As Double, ByVal FineDec As Integer, ByVal MarkerVel As Double, ByVal MarkerDec As Integer) As Integer
Declare Function get_homing_profile Lib "MMCWHP220.dll" (ByVal ax As Integer, ByRef pMainVel As Double, ByRef pMainDec As Integer, ByRef pRetVel As Double, ByRef pRetDec As Integer, ByRef pFineVel As Double, ByRef pFineDec As Integer, ByRef pMarkerVel As Double, ByRef pMarkerDec As Integer) As Integer
Declare Function mmcsw_version_chk Lib "MMCWHP220.dll" (ByRef ver As Integer) As Integer
Declare Function set_mmcsw_version Lib "MMCWHP220.dll" (ByVal ver As Integer) As Integer
Declare Function AxisPowerOnCheck Lib "MMCWHP220.dll" (ByVal Axis As Integer) As Integer
Declare Function Find_Bd_Jnt Lib "MMCWHP220.dll" (ByVal ax As Integer, ByRef bn As Integer, ByRef jnt As Integer) As Integer
'       ival[0] = ComVel;       ival[1] = ActVel;       ival[2] = ComRpm;       ival[3] = ActRpm;       ival[4] = Control_Error;
'       lval[0] = Command_Pos;  lval[1] = Actual_Pos;   lval[2] = Encoder_Pos;
Declare Function axis_monitor_params Lib "MMCWHP220.dll" (ByVal ax As Integer, ByRef lval As Long, ByRef iVal As Integer) As Integer

'2.20 added 2014.01.07 joystick function
Declare Function set_joystick_enable Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal Enable As Integer) As Integer
Declare Function set_joystick_velocity Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal vel0 As Integer, ByVal vel1 As Integer, ByVal vel2 As Integer, ByVal vel3 As Integer) As Integer
Declare Function get_joystick_enable Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByRef Enable As Integer) As Integer
Declare Function get_joystick_velocity Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByRef vel0 As Integer, ByRef vel1 As Integer, ByRef vel2 As Integer, ByRef vel3 As Integer) As Integer
